test_regress/t/t_var_bad_sv.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed into the Public Domain, for any use,
// without warranty, 2009 by Wilson Snyder.

module t;
   reg do;
   mod mod (.do(bar));
endmodule
